kubernetes/explorer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: explorer-service
spec:
  selector:
    app: explorer
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 80
